# GoDicePythonAPI

./: README.md  godice.py  main.py  pyproject.toml
.github/workflows/: publish.yml
godice/: __init__.py  demo.py  dice.py  factory.py  xyzinterpret.py
